--- a/config/packages/doctrine.yaml
+++ b/config/packages/doctrine.yaml
@@ -1,8 +1,12 @@
 doctrine:
     dbal:
-        url: '%env(resolve:DATABASE_URL)%'
-        #password: '%env(DATABASE_PASSWORD)%'
-        #user: '%env(MYSQL_DB_USER)%'
+        host: '%env(DBHOST)%'
+        port: '%env(DBPORT)%'
+        driver: pdo_mysql
+        dbname: '%env(DBNAME)%'
+        #url: '%env(resolve:DATABASE_URL)%'
+        password: '%env(DATABASE_PASSWORD)%'
+        user: '%env(MYSQL_DB_USER)%'
 
         # IMPORTANT: You MUST configure your server version,
         # either here or in the DATABASE_URL env var (see .env file)
