modif README.md & some files

--- a/.env
+++ b/.env
@@ -31,7 +31,7 @@ APP_SECRET=1e3c20ba93107ccd904468653d728fbe
 DBHOST="127.0.0.1"
 DBPORT="3306"
 DBNAME="VParrotWebAppDB"
-DATABASE_PASSWORD=""
+#DATABASE_PASSWORD=""
 MYSQL_DB_USER="root"
 APP_DEBUG=true
 ###< doctrine/doctrine-bundle ###
