--- a/config/packages/doctrine.yaml
+++ b/config/packages/doctrine.yaml
@@ -5,7 +5,7 @@ doctrine:
         driver: pdo_mysql
         dbname: '%env(DBNAME)%'
         #url: '%env(resolve:DATABASE_URL)%'
-        password: '%env(DATABASE_PASSWORD)%'
+        #password: '%env(DATABASE_PASSWORD)%'
         user: '%env(MYSQL_DB_USER)%'
 
         # IMPORTANT: You MUST configure your server version,
