--- a/.env
+++ b/.env
@@ -27,10 +27,10 @@ APP_SECRET=1e3c20ba93107ccd904468653d728fbe
 # DATABASE_URL="mysql://app:!ChangeMe!@127.0.0.1:3306/app?serverVersion=8.0.32&charset=utf8mb4"
 # DATABASE_URL="mysql://app:!ChangeMe!@127.0.0.1:3306/app?serverVersion=10.11.2-MariaDB&charset=utf8mb4"
 # DATABASE_URL="postgresql://app:!ChangeMe!@127.0.0.1:5432/app?serverVersion=15&charset=utf8"
-#DATABASE_URL="mysql://root:@127.0.0.1:3306/VParrotWebAppDB?serverVersion=10.4.28-MariaDB&charset=utf8mb4"
+#DATABASE_URL="mysql://root:@127.0.0.1:3306/VParrotWebApp?serverVersion=10.4.28-MariaDB&charset=utf8mb4"
 DBHOST="127.0.0.1"
 DBPORT="3306"
-DBNAME="VParrotWebAppDB"
+DBNAME="VParrotWebApp"
 #DATABASE_PASSWORD=""
 MYSQL_DB_USER="root"
 APP_DEBUG=true
