modif .env.test file

--- a/.env.test
+++ b/.env.test
@@ -4,7 +4,13 @@ APP_SECRET='$ecretf0rt3st'
 SYMFONY_DEPRECATIONS_HELPER=999999
 PANTHER_APP_ENV=panther
 PANTHER_ERROR_SCREENSHOT_DIR=./var/error-screenshots
-DATABASE_URL="mysql://root:@127.0.0.1:3306/VParrot_test?serverVersion=10.4.28-MariaDB&charset=utf8mb4"
+#DATABASE_URL="mysql://root:@127.0.0.1:3306/VParrot_test?serverVersion=10.4.28-MariaDB&charset=utf8mb4"
+DBHOST="127.0.0.1"
+DBPORT="3306"
+#DBNAME="VParrotWebAppOne"
+DBNAME="VParrot_test"
+#DATABASE_PASSWORD=""
+MYSQL_DB_USER="root"
 ###> symfony/mailer ###
 MAILER_DSN=gmail+smtp://user:app_password@default
 ###< symfony/mailer ###
